Moved model from api-server
Test Plan: http://jenkinsmaster.mediamiser.internal:8080/job/mercury-pull-model-samer/5/

Reviewers: chris.fournier, simon.baribeau, yan.shi

Reviewed By: yan.shi

Subscribers: chris.fournier, david.kalec

Differential Revision: http://phabricator.mediamiser.internal/D2719

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-**/target/**
-target/**
+target
 .classpath
 .project
 .settings/**
-**/bin/**
+bin
 **/.pydevproject
 *.pyc
 .DS_Store
 pom.xml.versionsBackup
 
+## IntelliJ IDEA
+.idea/*
+*.iml
+*.ipr
+*.iws
