Altered build timestamp format to use RFC 3339
Summary: Build timestamps now include timezone information and conform to [RFC 3339](https://tools.ietf.org/html/rfc3339)

Test Plan: - [Internal build](http://jenkinsmaster.mediamiser.internal:8080/view/Mercury%20libraries/job/mercury-pull-model-chris/8/)

Reviewers: samer.albuhaisi

Reviewed By: samer.albuhaisi

Differential Revision: http://phabricator.mediamiser.internal/D2779

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
     <central.repository-url>https://repo1.maven.org/maven2</central.repository-url>
+    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssXXX</maven.build.timestamp.format>
 
     <!-- Dependencies -->
     <slf4j.version>1.7.7</slf4j.version>
