Fixed typo, and modified SpoutReason enum
Summary:
Removed RATE_LIMITED from SpoutReason, added FINISHED.
Fixed typo in SpoutStatus.

Test Plan: http://jenkinsmaster.mediamiser.internal:8080/job/mercury-pull-model-samer/7/console

Reviewers: yan.shi, simon.baribeau, chris.fournier

Reviewed By: chris.fournier

Subscribers: chris.fournier, david.kalec

Differential Revision: http://phabricator.mediamiser.internal/D2800

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.mediamiser</groupId>
   <artifactId>pull-model</artifactId>
-  <version>0.0.0</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>MediaMiser RESTful Pull API Models</name>
