--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.mediamiser</groupId>
     <artifactId>pull-model</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>MediaMiser RESTful Pull API Models</name>
@@ -28,7 +28,6 @@
         <slf4j.version>1.7.7</slf4j.version>
         <apache-log4j.version>1.2.17</apache-log4j.version>
         <jersey.version>2.6</jersey.version>
-        <swagger.version>1.3.5</swagger.version>
         <jirutka-validator.version>2.1.3</jirutka-validator.version>
         <guava.version>14.0.1</guava.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
@@ -95,12 +94,6 @@
             <groupId>cz.jirutka.validator</groupId>
             <artifactId>validator-collection</artifactId>
             <version>${jirutka-validator.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${swagger.version}</version>
         </dependency>
 
         <dependency>
